
v6.5
(xx/03/18)

Changes / Improvements / Optimizations:
General | Minor code performance enhencements: https://github.com/Fourdee/DietPi/issues/1510
General | Our scripts preserve now the terminal scrollback buffer, when cleaning current terminal view: https://github.com/Fourdee/DietPi/issues/1615
General | G_WHIP_*: Rolled out to all DietPi scripts.
DietPi-Environment | Move sudoers adjustments to "/etc/sudoers.d/dietpi": https://github.com/Fourdee/DietPi/pull/1635
DietPi-Environment | Move sysctl adjustments to "/etc/sysctl.d/dietpi.conf" to assure higher priority than "/etc/sysctl.d/99-sysctl.conf": https://github.com/Fourdee/DietPi/pull/1635
DietPi-Config | Enabled possibility to adjust display resolution for VMs, but max guest display resolution might need to be adjusted within VM software as well: https://github.com/Fourdee/DietPi/issues/1227
DietPi-Config | Advanced options: You can now define the swapfile location: https://github.com/Fourdee/DietPi/issues/1602
DietPi-Config | Soundcards (RPi): Added option for ApplePi DAC: https://github.com/Fourdee/DietPi/issues/1626
DietPi-Process_Tool | Added ability to add custom process entries to "/DietPi/dietpi/.dietpi-process_tool_include". Add one process each line with the format <chosenName>:<executableFileName>. Check via htop, e.g. "DHCP client:dhclient"
DietPi-Software | NoMachine: Installation updated to 6.0.78 (new installations only): https://github.com/Fourdee/DietPi/issues/1340#issuecomment-372845397
DietPi-Software | Squeezebox server: Updated to systemd native service: https://github.com/Fourdee/DietPi/issues/1613
DietPi-Software | AmiBerry: Updated to 2.18. Improved audio latency, Unique new feature: WHDLoad booter! (check the wiki for details), bug fixes: https://github.com/Fourdee/DietPi/issues/1410#issuecomment-374060452