@@ -511,6 +511,20 @@ _EOF_
 			# - RPi resolve gettext error: https://github.com/Fourdee/DietPi/issues/1631#issuecomment-373965406
 			rm /etc/profile.d/wifi-country.sh &> /dev/null
 			#-------------------------------------------------------------------------------
+			#Sparky kernel update: https://github.com/sparky-sbc/sparky-test/tree/master/dsd-marantz
+			if (( $G_HW_MODEL == 70 )); then
+
+				#	patches
+				G_RUN_CMD wget https://raw.githubusercontent.com/sparky-sbc/sparky-test/master/dsd-marantz/snd-usb-audio.ko -O /lib/modules/3.10.38/kernel/sound/usb/snd-usb-audio.ko
+				G_RUN_CMD wget https://raw.githubusercontent.com/sparky-sbc/sparky-test/master/dsd-marantz/snd-usbmidi-lib.ko -O /lib/modules/3.10.38/kernel/sound/usb/snd-usbmidi-lib.ko
+
+				#	Firmware
+				G_RUN_CMD wget https://raw.githubusercontent.com/sparky-sbc/sparky-test/master/piano-firmware/piano-firmware.tar
+				tar -xvf piano-firmware.tar -C /lib/
+				rm piano-firmware.tar
+
+			fi
+			#-------------------------------------------------------------------------------
 
 		fi
 
