@@ -6,6 +6,7 @@ Changes / Improvements / Optimizations:
 General | Minor code performance enhencements: https://github.com/Fourdee/DietPi/issues/1510
 General | Our scripts preserve now the terminal scrollback buffer, when cleaning current terminal view: https://github.com/Fourdee/DietPi/issues/1615
 General | G_WHIP_*: Rolled out to all DietPi scripts.
+General | Sparky SBC: Kernel update: https://github.com/sparky-sbc/sparky-test/tree/master/dsd-marantz
 DietPi-Environment | Move sudoers adjustments to "/etc/sudoers.d/dietpi": https://github.com/Fourdee/DietPi/pull/1635
 DietPi-Environment | Move sysctl adjustments to "/etc/sysctl.d/dietpi.conf" to assure higher priority than "/etc/sysctl.d/99-sysctl.conf": https://github.com/Fourdee/DietPi/pull/1635
 DietPi-Config | Enabled possibility to adjust display resolution for VMs, but max guest display resolution might need to be adjusted within VM software as well: https://github.com/Fourdee/DietPi/issues/1227
